v 3.9.0 added Health check Servlet
- Moved some classes to the backend
- Added health check Servlet
- increases timeout to give more time for processes to finish
- BugFixed regarding accessing external website
- Added reading of VGene to local files